[package]
edition = "2021"
name = "recastnavigation-sys"
version = "1.0.3"

description = "Raw FFI bindings for recastnavigation."

license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/andriyDev/recastnavigation-rs-sys"

categories = ["game-development"]
keywords = ["recast", "detour", "navigation", "mesh", "pathfinding"]

exclude = [
  ".github/*",
]

# recastnavigation bundles several libraries together into a single repo. This
# would mean splitting this into several crates would require duplicating the
# recastnavigation repo multiple times or horrible modification of CMake files.
# Instead, Recast was made the "representative" and each library is enabled as a
# feature flag.
links = "Recast"

[features]
detour = []
detour_crowd = ["detour"]
detour_large_nav_meshes = ["detour"]
detour_tile_cache = ["detour"]
recast = []

[dependencies]
static_assertions = "1.1.0"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
cmake = "0.1.50"
pkg-config = "0.3.28"
